--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -2,3 +2,5 @@
 
 #Message sent to player when they can't use the spawner with current egg.
 failedMsg: "You are not allowed to put this egg into the spawner!"
+noPermissionMsg: "You don't have permission to use this command!"
+reloadComplete: "Reload Complete"
