--- a/src/main/resources/lang/zh-cn.yml
+++ b/src/main/resources/lang/zh-cn.yml
@@ -1,6 +1,6 @@
 
 
-header: "[&e刷怪笼系统&f]"
+header: "&f[&e刷怪笼系统&f]"
 #Message sent to player when they can't use the spawner with current egg.
 failedMsg: "&c你不能对刷怪笼使用这个怪物蛋"
 #Message sent to player when they have no permission to use mob egg on spawner
@@ -13,3 +13,5 @@ lackMoney: "&c操作失败,请检查你的余额"
 mobRuleSettled: "&a规则修改完成"
 # Message sent when the user is not a player
 playerOnly: "&c只有玩家才能使用此指令!"
+usage: "&6使用方法"
+availableMobs: "&6可用的生物"
