--- a/src/main/resources/lang/zh-cn.yml
+++ b/src/main/resources/lang/zh-cn.yml
@@ -4,7 +4,7 @@ header: "&f[&e刷怪笼系统&f]"
 #Message sent to player when they can't use the spawner with current egg.
 failedMsg: "&c你不能对刷怪笼使用这个怪物蛋"
 #Message sent to player when they have no permission to use mob egg on spawner
-noPermissionMsg: "&c你没有使用这个指令的权限"
+noPermissionMsg: "&c你没有权限"
 #Messsage sent to op upon reload completion
 reloadComplete: "&a重载插件配置完成"
 #Message sent to player when they don't have enough money
