--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -1,17 +1,19 @@
-
-
-
 header: "&f[&eSpawnerManager&f]"
-#Message sent to player when they can't use the spawner with current egg.
+# Message sent to player when they can't use the spawner with current egg.
 failedMsg: "&cYou are not allowed to put this egg into the spawner!"
-#Message sent to player when they have no permission to use mob egg on spawner
-noPermissionMsg: "&cYou don't have permission to use this command!"
-#Messsage sent to op upon reload completion
+# Message sent to player when they have no permission to use mob egg on spawner
+noPermissionMsg: "&cYou don't have permission to do this"
+# Messsage sent to op upon reload completion
 reloadComplete: "&aReload Complete"
-#Message sent to player when they don't have enough money
+# Message sent to player when they don't have enough money
 lackMoney: "&cYou don't have enough balance to put/replace the mob!"
 # Message sent to player when mob rule is being set
 mobRuleSettled: "&aRule applied"
+# Message sent to player when economy functionality is not available
+econDisabled: "&cEconomy functionality is disabled"
+# Message sent to player when the specified mob is not in whitelist
+# This will be invoked when someone try to set cost of a mob egg which is not allowed
+mobNotAllowed: "&cTarget mob egg is not set to be allowed in the game"
 # Message sent when the user is not a player
 playerOnly: "&cOnly player can use this command!"
 usage: "&6Usage"
